--- a/OVPN user-pass-validation/App.config
+++ b/OVPN user-pass-validation/App.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <OVPN_user_pass_validation.Properties.Settings>
             <setting name="def_PasswdFileEntryFormat" serializeAs="String">
-                <value>^{0} : {1}$</value>
+                <value>{0} : {1}</value>
             </setting>
         </OVPN_user_pass_validation.Properties.Settings>
     </applicationSettings>
