--- a/OVPN user-pass-validation/OVPN user-pass-validation.csproj
+++ b/OVPN user-pass-validation/OVPN user-pass-validation.csproj
@@ -93,6 +93,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
+    <Compile Include="WindowsCredAuth.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
