--- a/OVPN user-pass-validation/Properties/Settings.settings
+++ b/OVPN user-pass-validation/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="def_PasswdFileEntryFormat" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">^{0} : {1}$</Value>
+      <Value Profile="(Default)">{0} : {1}</Value>
     </Setting>
   </Settings>
 </SettingsFile>
