Альфа тестирование прошло успешно. Вроде как Убрал фризы при проверке группы. Но не факт, что будет теперь проверять из AD user-ов

--- a/OVPN user-pass-validation/OVPN user-pass-validation.csproj
+++ b/OVPN user-pass-validation/OVPN user-pass-validation.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomExtensions.cs" />
     <Compile Include="PasswdFileAuth.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
