--- a/OVPN user-pass-validation/WinOpenVPN_user-pass-validaton.csproj
+++ b/OVPN user-pass-validation/WinOpenVPN_user-pass-validaton.csproj
@@ -6,11 +6,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1427DE46-8CCC-44CB-85DD-8CA4454B98D3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>OVPN_user_pass_validation</RootNamespace>
-    <AssemblyName>OVPN user-pass-validation</AssemblyName>
+    <RootNamespace>WinOVPN_user_pass_validaton</RootNamespace>
+    <AssemblyName>WinOpenVPN_user-pass-validaton</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,7 +24,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
